simple-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  ports:
  - port: 80
  selector:
    app: nginx
