nginx-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: nginx-public
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /web
        backend:
          serviceName: webserver
          servicePort: 80
